--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "dev": "node build/dev-server.js",
     "start": "node build/dev-server.js",
     "build": "node build/build.js",
-    "deploy": "git subtree push --prefix dist heroku master",
+    "deploy": "git subtree split --prefix dist origin master",
     "lint": "eslint --ext .js,.vue src"
   },
   "dependencies": {
