--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "firebase": "^4.2.0",
     "vue": "^2.4.1",
     "vue-router": "^2.3.1",
-    "vuetify": "^0.14.0"
+    "vuetify": "^0.14.0",
+    "vuex": "^2.3.1"
   },
   "devDependencies": {
     "autoprefixer": "^6.7.2",
