added Google maps location card and refactored page data

--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "vuejs",
+  "name": "portfolio-website-front",
   "version": "1.0.0",
   "description": "A Vue.js project",
-  "author": "Cynicalbird <alex.ng.personal@gmail.com>",
+  "author": "aa-ng <alex.ng.personal@gmail.com>",
   "private": true,
   "scripts": {
     "dev": "node build/dev-server.js",
