--- a/package.json
+++ b/package.json
@@ -13,10 +13,11 @@
   },
   "dependencies": {
     "firebase": "^4.2.0",
+    "font-awesome": "^4.7.0",
     "scrollreveal": "^3.3.6",
     "vue": "^2.4.1",
     "vue-router": "^2.3.1",
-    "vuetify": "^0.14.0",
+    "vuetify": "^0.14.11",
     "vuex": "^2.3.1"
   },
   "devDependencies": {
